исправлено логирование, вынесение SQL запросов